// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Windows should render for default values 1`] = `
<div>
  <div
    data-testid="draggable-provider"
  >
    <div
      data-testid="resizable-box"
    >
      <div
        class="css-fjdgft"
      >
        <div
          class="handle css-1q7gku6"
        >
          <div
            aria-label="close"
            class="css-apaxy7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              x
            </p>
          </div>
          <div
            aria-label="minimize"
            class="css-1oliyf7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              -
            </p>
          </div>
          <div
            aria-label="maximize"
            class="css-18q4sxm"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              o
            </p>
          </div>
          <div
            class="css-1bc9bee"
          >
            <div>
              Top bar
            </div>
          </div>
        </div>
        <div
          class="css-1qx9vnh"
        >
          <div>
            Test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should render maximized window 1`] = `
<div>
  <div
    data-testid="draggable-provider"
  >
    <div
      data-testid="resizable-box"
    >
      <div
        class="css-fjdgft"
      >
        <div
          class="handle css-1q7gku6"
        >
          <div
            aria-label="close"
            class="css-apaxy7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              x
            </p>
          </div>
          <div
            aria-label="minimize"
            class="css-1oliyf7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              -
            </p>
          </div>
          <div
            aria-label="maximize"
            class="css-18q4sxm"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              o
            </p>
          </div>
          <div
            class="css-1bc9bee"
          />
        </div>
        <div
          class="css-1qx9vnh"
        >
          <div>
            Test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should toggle maximize on double click on title bar 1`] = `
<div>
  <div
    data-testid="draggable-provider"
  >
    <div
      data-testid="resizable-box"
    >
      <div
        class="css-fjdgft"
      >
        <div
          class="handle css-1q7gku6"
        >
          <div
            aria-label="close"
            class="css-apaxy7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              x
            </p>
          </div>
          <div
            aria-label="minimize"
            class="css-1oliyf7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              -
            </p>
          </div>
          <div
            aria-label="maximize"
            class="css-18q4sxm"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              o
            </p>
          </div>
          <div
            class="css-1bc9bee"
          />
        </div>
        <div
          class="css-1qx9vnh"
        >
          <div>
            Test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should trigger close on close button press 1`] = `
<div>
  <div
    data-testid="draggable-provider"
  >
    <div
      data-testid="resizable-box"
    >
      <div
        class="css-fjdgft"
      >
        <div
          class="handle css-1q7gku6"
        >
          <div
            aria-label="close"
            class="css-apaxy7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              x
            </p>
          </div>
          <div
            aria-label="minimize"
            class="css-1oliyf7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              -
            </p>
          </div>
          <div
            aria-label="maximize"
            class="css-18q4sxm"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              o
            </p>
          </div>
          <div
            class="css-1bc9bee"
          />
        </div>
        <div
          class="css-1qx9vnh"
        >
          <div>
            Test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should trigger maximize on maximize button press 1`] = `
<div>
  <div
    data-testid="draggable-provider"
  >
    <div
      data-testid="resizable-box"
    >
      <div
        class="css-fjdgft"
      >
        <div
          class="handle css-1q7gku6"
        >
          <div
            aria-label="close"
            class="css-apaxy7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              x
            </p>
          </div>
          <div
            aria-label="minimize"
            class="css-1oliyf7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              -
            </p>
          </div>
          <div
            aria-label="maximize"
            class="css-18q4sxm"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              o
            </p>
          </div>
          <div
            class="css-1bc9bee"
          />
        </div>
        <div
          class="css-1qx9vnh"
        >
          <div>
            Test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Windows should trigger minimize on minimize button press 1`] = `
<div>
  <div
    data-testid="draggable-provider"
  >
    <div
      data-testid="resizable-box"
    >
      <div
        class="css-fjdgft"
      >
        <div
          class="handle css-1q7gku6"
        >
          <div
            aria-label="close"
            class="css-apaxy7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              x
            </p>
          </div>
          <div
            aria-label="minimize"
            class="css-1oliyf7"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              -
            </p>
          </div>
          <div
            aria-label="maximize"
            class="css-18q4sxm"
          >
            <p
              class="chakra-text css-1r0gc73"
            >
              o
            </p>
          </div>
          <div
            class="css-1bc9bee"
          />
        </div>
        <div
          class="css-1qx9vnh"
        >
          <div>
            Test
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
